# knightspiral

./: .gitignore  PKG-INFO  README.md  allurerc.mjs  batchtest.py  conftest.py  pyproject.toml
benchmarks/: test_simulation_benchmarks.py
knightspiral/: __init__.py  __main__.py  cache.py  cli.py  colors.py  constants.py  game.py  matrix.py  models.py  progress.py  raster.py  science.py  spiral.py  storage.py
test_support/: allure_support.py
tests/: test_cache.py  test_cli.py  test_game.py  test_matrix.py  test_science.py  test_simulation_profiles.py  test_spiral.py  test_visual_artifacts.py
