[project]
name = "knightspiral"
version = "0.2.0"
description = "Simulate and render competing knight armies on an infinite spiral-numbered chessboard."
authors = [
    { name = "DJ Stomp", email = "85457381+DJStompZone@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
keywords = ["knight", "spiral", "simulation", "chess", "oeis", "numberphile", "raster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
progress = ["tqdm>=4.66"]

[project.scripts]
knightspiral = "knightspiral.cli:entrypoint"
knightspiral-matrix = "knightspiral.matrix:entrypoint"

[tool.poetry]
packages = [{ include = "knightspiral" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = "^7.1.0"
pytest-benchmark = "^5.2.3"
pyinstrument = "^5.1.2"
allure-pytest = "^2.16.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
